--- a/public/reverb-chat-test.html
+++ b/public/reverb-chat-test.html
@@ -143,7 +143,7 @@
         "Accept": "application/json",
         "Content-Type": "application/json"
       },
-      body: JSON.stringify({ message: msg })
+      body: JSON.stringify({ content: msg })
     });
 
     const data = await res.json().catch(() => ({}));
