Improve Reverb chat test logging

--- a/public/reverb-chat-test.html
+++ b/public/reverb-chat-test.html
@@ -4,12 +4,14 @@
   <meta charset="utf-8" />
   <title>Reverb Chat Test</title>
   <style>
-    body { font-family: Arial; padding: 16px; }
+    body { font-family: Arial, sans-serif; padding: 16px; }
     input, button { padding: 8px; margin: 4px 0; width: 100%; }
     .row { display:flex; gap: 10px; }
     .col { flex: 1; border: 1px solid #ddd; padding: 10px; border-radius: 8px; }
-    pre { background:#f7f7f7; padding: 8px; height: 240px; overflow:auto; }
-    .status { font-size: 12px; color: #444; }
+    pre { background:#f7f7f7; padding: 8px; height: 260px; overflow:auto; }
+    .status { font-size: 12px; color: #444; margin-top: 6px; }
+    .btn-row { display:flex; gap: 6px; }
+    .btn-row button { width: 100%; }
   </style>
 </head>
 <body>
@@ -24,15 +26,20 @@
     <h3>User A</h3>
     <label>Bearer Token</label>
     <input id="tokenA" value="PASTE_USER_A_TOKEN" />
-    <button onclick="connect('A')">Connect A</button>
+    <div class="btn-row">
+      <button onclick="connect('A')">Connect A</button>
+      <button onclick="disconnect('A')">Disconnect A</button>
+    </div>
 
     <label>Send Message (A)</label>
     <input id="msgA" placeholder="Type message as A and press Send" />
     <button onclick="sendMsg('A')">Send from A</button>
 
     <label>Typing (A)</label>
-    <button onclick="typing('A', true)">A Typing ON</button>
-    <button onclick="typing('A', false)">A Typing OFF</button>
+    <div class="btn-row">
+      <button onclick="typing('A', true)">A Typing ON</button>
+      <button onclick="typing('A', false)">A Typing OFF</button>
+    </div>
 
     <div class="status" id="statusA">Not connected</div>
     <pre id="logA"></pre>
@@ -42,15 +49,20 @@
     <h3>User B</h3>
     <label>Bearer Token</label>
     <input id="tokenB" value="PASTE_USER_B_TOKEN" />
-    <button onclick="connect('B')">Connect B</button>
+    <div class="btn-row">
+      <button onclick="connect('B')">Connect B</button>
+      <button onclick="disconnect('B')">Disconnect B</button>
+    </div>
 
     <label>Send Message (B)</label>
     <input id="msgB" placeholder="Type message as B and press Send" />
     <button onclick="sendMsg('B')">Send from B</button>
 
     <label>Typing (B)</label>
-    <button onclick="typing('B', true)">B Typing ON</button>
-    <button onclick="typing('B', false)">B Typing OFF</button>
+    <div class="btn-row">
+      <button onclick="typing('B', true)">B Typing ON</button>
+      <button onclick="typing('B', false)">B Typing OFF</button>
+    </div>
 
     <div class="status" id="statusB">Not connected</div>
     <pre id="logB"></pre>
@@ -63,23 +75,26 @@
 <script>
   const REVERB_HOST = "127.0.0.1";
   const REVERB_PORT = "8080";
-  const REVERB_KEY  = "usng6vzqesxebdilitip"; // must match .env REVERB_APP_KEY
-  const APP_BASE    = "http://127.0.0.1:8000"; // your laravel serve url
+  const REVERB_KEY = "usng6vzqesxebdilitip"; // must match .env REVERB_APP_KEY
+  const APP_BASE = "http://127.0.0.1:8000"; // your laravel serve url
 
   const echoes = {};
 
   function log(who, obj) {
-    const el = document.getElementById("log"+who);
-    el.textContent += (typeof obj === "string" ? obj : JSON.stringify(obj, null, 2)) + "\n";
+    const el = document.getElementById("log" + who);
+    const message = typeof obj === "string" ? obj : JSON.stringify(obj, null, 2);
+    el.textContent += message + "\n";
     el.scrollTop = el.scrollHeight;
   }
 
   function setStatus(who, s) {
-    document.getElementById("status"+who).textContent = s;
+    document.getElementById("status" + who).textContent = s;
   }
 
-  function makeEcho(token) {
-    return new Echo.Echo({
+  function makeEcho(token, who) {
+    Pusher.logToConsole = true;
+
+    const echo = new Echo.Echo({
       broadcaster: "pusher",
       key: REVERB_KEY,
       wsHost: REVERB_HOST,
@@ -96,44 +111,78 @@
         }
       }
     });
+
+    echo.connector.pusher.connection.bind("state_change", (states) => {
+      log(who, { event: "pusher.state_change", states });
+    });
+
+    echo.connector.pusher.connection.bind("connected", () => {
+      log(who, { event: "pusher.connected" });
+    });
+
+    echo.connector.pusher.connection.bind("disconnected", () => {
+      log(who, { event: "pusher.disconnected" });
+    });
+
+    echo.connector.pusher.connection.bind("error", (err) => {
+      log(who, { event: "pusher.error", err });
+    });
+
+    return echo;
   }
 
   function connect(who) {
     const chatId = document.getElementById("chatId").value.trim();
-    const token = document.getElementById("token"+who).value.trim();
+    const token = document.getElementById("token" + who).value.trim();
     if (!chatId || !token) return alert("Chat ID + Token required");
 
     if (echoes[who]) {
-      try { echoes[who].disconnect(); } catch(e) {}
+      disconnect(who);
     }
 
-    const echo = makeEcho(token);
+    const echo = makeEcho(token, who);
     echoes[who] = echo;
 
     setStatus(who, "Connecting...");
 
-    // Private channel for new messages / read updates
     echo.private(`private-chat.${chatId}`)
-      .listen(".chat.message.sent", (e) => log(who, {event:"chat.message.sent", data:e}))
-      .listen(".chat.read.updated", (e) => log(who, {event:"chat.read.updated", data:e}))
-      .error((err) => log(who, {event:"private.error", err}));
+      .listen(".chat.message.sent", (e) => log(who, { event: "chat.message.sent", data: e }))
+      .listen(".chat.read.updated", (e) => log(who, { event: "chat.read.updated", data: e }))
+      .error((err) => log(who, { event: "private.error", err }));
 
-    // Presence channel for online/offline + typing
     echo.join(`presence-chat.${chatId}`)
-      .here((users) => log(who, {event:"presence.here", users}))
-      .joining((user) => log(who, {event:"presence.joining", user}))
-      .leaving((user) => log(who, {event:"presence.leaving", user}))
-      .listen(".chat.typing", (e) => log(who, {event:"chat.typing", data:e}))
-      .error((err) => log(who, {event:"presence.error", err}));
+      .here((users) => log(who, { event: "presence.here", users }))
+      .joining((user) => log(who, { event: "presence.joining", user }))
+      .leaving((user) => log(who, { event: "presence.leaving", user }))
+      .listen(".chat.typing", (e) => log(who, { event: "chat.typing", data: e }))
+      .error((err) => log(who, { event: "presence.error", err }));
 
-    setStatus(who, "Connected (subscribed to private + presence)");
-    log(who, "Subscribed to: private-chat."+chatId+" and presence-chat."+chatId);
+    setStatus(who, "Connected (subscribed private + presence)");
+    log(who, "Subscribed to: private-chat." + chatId + " and presence-chat." + chatId);
+  }
+
+  function disconnect(who) {
+    const chatId = document.getElementById("chatId").value.trim();
+    const echo = echoes[who];
+    if (!echo) return;
+
+    try {
+      echo.leave(`presence-chat.${chatId}`);
+      echo.leave(`private-chat.${chatId}`);
+      echo.disconnect();
+    } catch (e) {
+      log(who, { event: "disconnect.error", e });
+    }
+
+    echoes[who] = null;
+    setStatus(who, "Not connected");
+    log(who, "Disconnected");
   }
 
   async function sendMsg(who) {
     const chatId = document.getElementById("chatId").value.trim();
-    const token = document.getElementById("token"+who).value.trim();
-    const msg = document.getElementById("msg"+who).value.trim();
+    const token = document.getElementById("token" + who).value.trim();
+    const msg = document.getElementById("msg" + who).value.trim();
     if (!msg) return;
 
     const res = await fetch(`${APP_BASE}/api/v1/chats/${chatId}/messages`, {
@@ -147,12 +196,12 @@
     });
 
     const data = await res.json().catch(() => ({}));
-    log(who, {event:"api.send", status:res.status, data});
+    log(who, { event: "api.send", status: res.status, data });
   }
 
   async function typing(who, isTyping) {
     const chatId = document.getElementById("chatId").value.trim();
-    const token = document.getElementById("token"+who).value.trim();
+    const token = document.getElementById("token" + who).value.trim();
 
     const res = await fetch(`${APP_BASE}/api/v1/chats/${chatId}/typing`, {
       method: "POST",
@@ -165,7 +214,7 @@
     });
 
     const data = await res.json().catch(() => ({}));
-    log(who, {event:"api.typing", status:res.status, data});
+    log(who, { event: "api.typing", status: res.status, data });
   }
 </script>
 
